<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DrinkScreenActivity">

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="match_parent"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="165dp"
                    android:layout_height="165dp"
                    android:layout_marginStart="123dp"
                    android:layout_marginLeft="10dp">

                    <ImageView
                        android:id="@+id/imageViewDrinkProfile"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="6dp"
                        app:srcCompat="@android:mipmap/sym_def_app_icon" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/frame" />
                </FrameLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/name"
                    android:textColor="#000000"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    tools:text="@string/name" />

                <TextView
                    android:id="@+id/textDrinkName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="66dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:text="TextView"
                    android:textColor="#000000"
                    android:textSize="17sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/alcoholic"
                    android:textColor="#000000"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    tools:text="@string/alcoholic" />

                <TextView
                    android:id="@+id/textDrinkAlcoholic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_weight="1"
                    android:text="TextView"
                    android:textColor="#000000"
                    android:textSize="17sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/glass"
                    android:textColor="#000000"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    tools:text="@string/glass" />

                <TextView
                    android:id="@+id/textDrinkGlass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="68dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_weight="1"
                    android:text="TextView"
                    android:textColor="#000000"
                    android:textSize="17sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/profileRowColor"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="158dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/ingredients"
                    android:textColor="#000000"
                    android:textSize="17sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ingredients"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="12dp"
                    android:lineSpacingMultiplier="1.4"
                    android:text="Text"
                    android:textColor="#000000"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/measures"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="65dp"
                    android:layout_marginLeft="12dp"
                    android:lineSpacingMultiplier="1.4"
                    android:text="Text"
                    android:textColor="#000000"
                    android:textSize="17sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/profileRowColor"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="158dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/instructions"
                    android:textColor="#000000"
                    android:textSize="17sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/instructions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginEnd="12dp"
                    android:lineSpacingMultiplier="1.4"
                    android:text="Text"
                    android:textColor="#000000"
                    android:textSize="17sp"
                    android:layout_marginRight="12dp" />

            </LinearLayout>
        </TableLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>